tests/paczka2/big_fuzzy/66879883.err
Error in line 6: pjCWNWs S65 20,8
Error in line 3: mHLQ A110 843,5
Error in line 11: FXuxAtY S67 99,6
Error in line 18: FXuxAtY S65 44,8
Error in line 41: pjCWNWs S67 18,6
Error in line 48: pjCWNWs S587 15,1
Error in line 24: S65 S67 7,5
Error in line 53: mHLQ S;5 2;5,9
Error in line 59: 1iL S67 81,8
Error in line 49: mHLQ S65 79,6
Error in line 70: mHLQ A110 91,0
Error in line 75: FXuxAtY S67 26,2
Error in line 82: FXuxAtY S65 94,1
Error in line 77: pjCWNWs S67 42,7
Error in line 84: FXuxAtY A110 63,8
Error in line 105: FXuxAtY A110 4,7
Error in line 107: 1iL S65 200,2
Error in line 110: mHLQ S67 91,6
Error in line 125: pjCWNWs A110 -1,3
Error in line 114: xzsiFkXJ S587 50,5
Error in line 109: 1iL S587 84,7
Error in line 124: pjCWNWs A110 65,0
Error in line 127: 1iL A110 56,5
Error in line 129: 1iL S67 21,3
Error in line 128: pjCWNWs S587 27,4
Error in line 140: pjCWNWs A110 25,6
Error in line 147: 1iL A110 21,1
Error in line 142: xzsiFkXJ A110 261,9
Error in line 152: FXuxAtY S587 76,2
Error in line 163: FXuxAtY S67 19,4
Error in line 162: mHLQ S587 56,6
Error in line 178: S65 S587 -3,1
Error in line 175: 1iL A110 73,4
Error in line 173: S65 S587 96,2
Error in line 193: VgJaUu2ryJF S65 2,3
Error in line 195: FXuxAtY A110 65,2
Error in line 219: VgJaUu2ryJF A110 7,3
Error in line 220: pjCWNWs S587 94,0
Error in line 233: pjCWNWs A110 12,7
Error in line 232: 1iL S65 66,8
Error in line 238: 1iL S67 45,8
Error in line 243: mHLQ S587 34,8
Error in line 217: xzsiFkXJ S65 82,2
